@@ -73,13 +73,26 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-
+          <version>${maven-compiler-plugin.version}</version>
+          <configuration>
+            <release>${java.version}</release>
+            <parameters>true</parameters>
+            <compilerArgs>
+              <arg>--enable-preview</arg>
+              <arg>-Xlint:all</arg>
+            </compilerArgs>
+          </configuration>
         </plugin>
 
         <!-- Surefire -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+            <useModulePath>false</useModulePath>
+          </configuration>
         </plugin>
 
         <!-- For integration tests -->
